--- a/Kapitel1/Aufgabe4/style.css
+++ b/Kapitel1/Aufgabe4/style.css
@@ -193,6 +193,148 @@ input[type="checkbox"]{
 }
 
 
+#spinner {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 15px solid #3A6073;
+    border-left: 15px solid #16222A;
+    animation: spinner 2s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spinner {
+    from{
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+#loading-bar {
+    margin: 25px auto 40px auto;
+    width: 80%;
+    height: 40px;
+    background-color: #16222A;
+    border-radius: 20px;
+}
+
+#loading-bar div{
+    width: 100%;
+    height: 40px;
+    background-color: #3A6073;
+    border-radius: 20px 0 0 20px;
+    animation: loading-bar 5s linear infinite;
+}
+
+@keyframes loading-bar{
+    0%{
+        width: 0%;
+    }
+    27% {
+        width: 33%;
+    }
+    57%{
+        width: 56%;
+    }
+    70% {
+        width: 80%;
+    }
+    87% {
+        border-radius: 20px 0 0 20px;
+        width: 98%;
+    }
+
+    90% {
+        width: 100%;
+        border-radius: 20px;
+    }
+    100% {
+        width: 100%;
+        border-radius: 20px;
+    }
+
+}
+
+#loading-bar-smooth {
+    margin: 25px auto 40px auto;
+    width: 80%;
+    height: 40px;
+    background-color: #16222A;
+    border-radius: 20px;
+}
+
+#loading-bar-smooth div{
+    width: 100%;
+    height: 40px;
+    background-color: #3A6073;
+    border-radius: 20px 0 0 20px;
+    animation: loading-bar-smooth 5s linear infinite;
+}
+@keyframes loading-bar-smooth {
+    0% {
+        width: 0%
+    }
+    85%{
+        border-radius: 20px 0 0 20px;
+        width: 95%;
+    }
+    90%{
+        width: 100%;
+        border-radius: 20px;
+    }
+    100% {
+        width: 100%;
+        border-radius: 20px;
+    }
+}
+
+#heartbeat {
+    position: relative;
+    margin: 20px auto 40px auto;
+    height: 75px;
+    width: 50px;
+    animation: heartbeat 0.8s ease infinite alternate;
+}
+#heartbeat::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 9px;
+    background-color: #F9423A;
+    height: 75px;
+    width: 50px;
+    transform: rotate(45deg);
+    border-radius: 25px 25px 0 0;
+}
+
+#heartbeat::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -9px;
+    background-color: #F9423A;
+    height: 75px;
+    width: 50px;
+    transform: rotate(-45deg);
+    border-radius: 25px 25px 0 0;
+}
+
+
+@keyframes heartbeat{
+    0%{
+        transform: scale(1.0);
+    }
+    80% {
+        transform: scale(1.0);
+    }
+    100%{
+        transform: scale(1.1);
+    }
+}
+
+
 @media screen and (min-width: 600px){
 
     nav{
@@ -257,6 +399,7 @@ input[type="checkbox"]{
         height: 3vh;
         margin: 0 10px 0 10px;
         font-weight: 500;
+        transition: text-shadow 0.2s;
     }
     
     .navlink:hover{
@@ -326,7 +469,9 @@ input[type="checkbox"]{
         font-size: 30px;
         margin: 20px 15px 10px 0;
         padding: 0;
-        height: 10px;    
+        height: 10px;   
+        transform: scale(1.0);
+        transition: transform 0.2s ease, color 0.2s ease; 
     }
 
     #header-icons a{
@@ -335,6 +480,7 @@ input[type="checkbox"]{
     
     #header-icons i:hover{
         color: white;
+        transform: scale(1.1);
     }
     
     #header-content{
@@ -441,10 +587,14 @@ input[type="checkbox"]{
     
     input[type="submit"]{
         width: 130px;
+        transform: scale(1.0);
+        transition: background-color 0.3s, transform 0.3s, text-shadow 0.3s;
     }
     
     input[type="submit"]:hover{
         text-shadow: 0 0 5px lightblue;
+        transform: scale(1.1);
+        background-color: #294351;
     }
 
     .social-media-button {
@@ -454,10 +604,13 @@ input[type="checkbox"]{
         width: 50%;
         border-radius: 30px;
         margin: 15px 195px;
+        transform: scale(1.0);
+        transition: transform 0.3s, text-shadow 0.3s;
     }
     
     .social-media-button:hover{
         text-shadow: 0 0 5px lightblue;
+        transform: scale(1.1);
     }
     
     
