--- a/Kapitel2/Kapitelaufgabe/style.css
+++ b/Kapitel2/Kapitelaufgabe/style.css
@@ -42,20 +42,45 @@ body {
 }
 
 #pictureBody {
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
-    "header"
-    "picture"
-    "save";
+    "header header"
+    "picture picture"
+    "change new";
 }
 
 #chooseSymbol, #chooseShield, #chooseShieldColor {
     height: 100%;
-    text-align: center;
     color: white;
-    line-height: 31vh;
     text-decoration: none;
+    display: grid;
+    grid-template-areas: "headText chosen"
+}
+
+#chooseSymbol p, #chooseShield p, #chooseShieldColor p {
+    grid-area: headText;
+    justify-self: end;
+    align-self: center;
     font-size: 10vh;
-    font-weight: 900;
+}
+
+#chooseSymbol .chosen, #chooseShield .chosen, #chooseShieldColor .chosen {
+    grid-area: chosen;
+    justify-self: center;
+    align-self: center;
+    font-size: 6vh;
+}
+
+#chooseSymbol img, #chooseShield img, #chooseShieldColor img {
+    border: 5px solid white;
+    padding: 5px;
+    background: linear-gradient(45deg, #e8e9fc, #7e7e7e);
+    height: 15vh;
+}
+
+#chooseShieldColor img {
+    width: 13vh;
+    height: 13vh;
 }
 
 #chooseSymbol {
@@ -152,7 +177,7 @@ body {
     transform: scale(1.1);
 }
 
-.save, #makeNew {
+.save, #makeNew, #change {
     grid-area: save;
     background: linear-gradient(45deg, #e8e9fc, #7e7e7e);
     text-align: center;
@@ -161,6 +186,15 @@ body {
     color: black;
     font-weight: 600;
     text-decoration: none;
+}
+
+#makeNew {
+    grid-area: new;
+}
+
+#change {
+    grid-area: change;
+    background: linear-gradient(45deg, #A2A3B0, #7e7e7e);
 }
 
 /* final picture */
@@ -174,6 +208,7 @@ body {
     top: 30%;
     left: 27.5%;
     width: 45%;
+    z-index: 3;
 }
 
 #finalColor {
@@ -181,11 +216,13 @@ body {
     left: 20%;
     width: 65%;
     height: 75%;
+    z-index: 1;
 }
 
 #finalShield {
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 #finalBorder {
