--- a/Kapitel2/Kapitelaufgabe/style.css
+++ b/Kapitel2/Kapitelaufgabe/style.css
@@ -198,6 +198,15 @@ body {
 }
 
 /* final picture */
+#message {
+    position: absolute;
+    color: white;
+    top: 10vh;
+    left: 1vw;
+    font-size: 3vh;
+    width: 100%;
+}
+
 #finalPictureDiv {
     position: relative;
     height: 600px;
